# NewSpotTheDiff

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILD_FIX_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_HF.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  README_JP.md  TESTING.md  URGENT_FIX.md  build.sh  pyproject.toml  requirements.txt  run.py  tmpclaude-e441-cwd
doc/: comparison_guide.md  design.md  implementation_plan.md  lightweight_alternatives_research.md  lightweight_design.md  lightweight_implementation_guide.md  quick_reference.md  requirements.md  system_architecture.md  technical_research.md
docs/: IMPLEMENTATION_REPORT_JP.md  QUALITY_IMPROVEMENT_JP.md  SECURITY_IMPROVEMENTS_JP.md  USER_GUIDE_JP.md  VERSION_2.1_COMPLETION_REPORT.md
scripts/: download_model.py  init_db.py
src/: __init__.py  app.py  config.py  database.py  exceptions.py
src/models/: __init__.py  difference.py  job.py  segment.py
src/routes/: __init__.py  generate.py  main.py  pages.py  upload.py
src/services/: a4_layout_composer.py  answer_visualizer.py  color_changer.py  difference_generator.py  inpainting.py  job_manager.py  object_duplicator.py  quality_evaluator.py  saliency.py  segmentation.py
src/static/css/: style.css
src/static/js/: processing.js  result.js  upload.js
src/templates/: about.html  base.html  index.html  privacy.html  processing.html  result.html  sitemap.xml  terms.html
src/utils/: file_manager.py  image_io.py  validation.py
tests/: test_features.py
