[project]
name = "spot-the-diff"
version = "2.2.0"
description = "AI-powered spot-the-difference puzzle generator with quality evaluation and production deployment support"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "pillow>=10.0",
    "opencv-python>=4.8",
    "opencv-contrib-python>=4.8",
    "ultralytics>=8.0",
    "numpy>=1.24",
    "scikit-image>=0.21.0",
    "flask-talisman>=1.0",
    "flask-limiter>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests requiring FastSAM model (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
